# codemap

./: .gitignore  README.md  pyproject.toml
codemap/: __init__.py  __main__.py
codemap/ai/: __init__.py  service_manager.py
codemap/ai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
codemap/analyzers/: __init__.py  base.py  factory.py  java.py  javascript.py  python.py  typescript.py
codemap/cli/: __init__.py
codemap/core/: __init__.py  config.py  events.py  exceptions.py
codemap/parsers/: __init__.py  ast_parser.py  python_parser.py  tree_sitter_parser.py  utils.py
codemap/services/: __init__.py
codemap/ui/: __init__.py
codemap/ui/dialogs/: __init__.py
codemap/ui/nodegraph/: __init__.py
codemap/ui/styles/: __init__.py
codemap/ui/utils/: __init__.py
codemap/utils/: __init__.py
docs/: arquitectura-tecnica.md
tests/: __init__.py
