[project]
name = "codemap"
version = "1.0.0"
description = "Análisis y visualización de código - Desktop App NodeGraphQt + PyQt6"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Xeworg" }
]
keywords = ["code-analysis", "visualization", "code-graph", "desktop", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: Mac OS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = []

dependencies = [
    # UI Framework - NodeGraphQt + PyQt6
    "PyQt6>=6.6.0",
    "NodeGraphQt>=0.6.0",

    # Code Analysis
    "tree-sitter>=0.23.0",
    "libcst>=1.5.0",
    "astroid>=3.3.0",

    # HTTP Client for AI APIs
    "httpx>=0.27.0",

    # Data Validation
    "pydantic>=2.10.0",

    # AI/ML Local
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",

    # Utilities
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "typer>=0.14.0",
    "chardet>=5.2.0",
    "watchfiles>=1.0.0",

    # Async
    "anyio>=4.6.0",

    # Path handling
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-material>=9.5.0",
]
build = [
    "pyinstaller>=6.11.0",
    "cx-freeze>=6.15.0",
    "wheel>=0.44.0",
    "setuptools>=75.0.0",
]

[project.scripts]
codemap = "codemap.__main__:main"

[project.urls]
Homepage = "https://github.com/Xeworg/codemap"
Repository = "https://github.com/Xeworg/codemap"
Issues = "https://github.com/Xeworg/codemap/issues"
Changelog = "https://github.com/Xeworg/codemap/blob/main/CHANGELOG.md"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["codemap"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pre-commit-config]
repos = [
    { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.8.0", hooks = [
        { id = "ruff", args = ["--fix"] },
        { id = "ruff-format" },
    ]},
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v5.0.0", hooks = [
        { id = "trailing-whitespace" },
        { id = "end-of-file-fixer" },
        { id = "check-yaml" },
        { id = "check-json" },
        { id = "check-toml" },
        { id = "check-added-large-files" },
    ]},
    { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.13.0", hooks = [
        { id = "mypy", args = ["--no-error-summary", "--show-error-codes", "--pretty"], types_or = ["python"] },
    ]},
]

[tool.hatch.build.targets.wheel]
packages = ["codemap"]

[tool.hatch.build.targets.sdist]
include = [
    "/codemap",
    "/tests",
    "/pyproject.toml",
    "/README.md",
    "/CHANGELOG.md",
]
